Displaying the armature layers popup in edit mode always fails #39895

Closed
opened 2014-04-25 15:36:39 +02:00 by Walid Shouman · 6 comments
Member

System Information
Operating system and graphics card

Blender Version
Broken: 2.70
Worked: I think before a42ba82f63

Short description of error
clicking shift+m while a bone in selection in edit mode doesn't popup the layers window
even though that works well in pose mode

Hints
The ARMATURE_OT_armature_layers is connected to pose_armature_layers_exec, which checks only for the pose mode within BKE_object_pose_context_check(), however we should also accept edit mode

**System Information** Operating system and graphics card **Blender Version** Broken: 2.70 Worked: I think before a42ba82f638e481d7fd3c3ed2ba05c331ef6717e **Short description of error** clicking shift+m while a bone in selection in edit mode doesn't popup the layers window even though that works well in pose mode **Hints** The ARMATURE_OT_armature_layers is connected to pose_armature_layers_exec, which checks only for the pose mode within BKE_object_pose_context_check(), however we should also accept edit mode
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @WalidShouman

Added subscriber: @WalidShouman
Bastien Montagne self-assigned this 2014-04-25 15:59:26 +02:00

This issue was referenced by blender/blender-addons-contrib@18060d8632

This issue was referenced by blender/blender-addons-contrib@18060d863207d98a06b743437f2353516605436e

This issue was referenced by 18060d8632

This issue was referenced by 18060d863207d98a06b743437f2353516605436e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 18060d8632.

Closed by commit 18060d8632.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39895
No description provided.