release/scripts/presets/keyconfig/3dsmax.py
@@ -270,7 +270,7 @@ kmi.properties.name = 'VIEW3D_MT_bone_options_enable'
 kmi = km.keymap_items.new('wm.call_menu', 'W', 'PRESS', alt=True)
 kmi.properties.name = 'VIEW3D_MT_bone_options_disable'
 kmi = km.keymap_items.new('armature.layers_show_all', 'ACCENT_GRAVE', 'PRESS', ctrl=True)
-kmi = km.keymap_items.new('pose.armature_layers', 'M', 'PRESS', shift=True)
+kmi = km.keymap_items.new('armature.armature_layers', 'M', 'PRESS', shift=True)
 kmi = km.keymap_items.new('pose.bone_layers', 'M', 'PRESS')
 kmi = km.keymap_items.new('transform.transform', 'S', 'PRESS', ctrl=True, alt=True)
 kmi.properties.mode = 'BONE_SIZE'
